--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container clearfix">
         <a class="hclass">Contact</a>
         <div class="row">
             <div class="column">
