--- a/portfolio.html
+++ b/portfolio.html
@@ -11,40 +11,38 @@
 </head>
 
 <body>
-    <nav>
-        <div class="navContainer clearfix">
-            <a id="logo" class="hclass">Casey Shore</a>
-            <div class="clinks clearfix">
-                <div class="fclass">
-                    <a id="contact" href="contact.html">Contact</a>
-                    <a id="portfolio" href="#">Portfolio</a>
-                    <a id="about" href="index.html">About</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <div class="clearfix">
+    <header id="m-head">
         <div class="container">
-            <a class="hclass">Portfolio</a>
-            <div class="grid-container">
-                <div class="fclass">
-                    <div class="box">
-                        <img src="assets/images/Afterlight.jpg" alt="Afterlight">
-                        <div class="box-text">Afterlight</div>
-                    </div>
-                    <div class="box">
-                        <img src="assets/images/dontfeelgood.png" alt="dontfeelgood">
-                        <div class="box-text">I don't feel so good</div>
-                    </div>
-                    <div class="box">
-                        <img src="assets/images/ShipSign.png" alt="ShipSign">
-                        <div class="box-text">Ship Sign</div>
-                    </div>
+            <a id="logo">Casey Shore</a>
+            <nav>
+                <a id="contact" href="contact.html">Contact</a>
+                <a id="portfolio" href="portfolio.html">Portfolio</a>
+                <a id="about" href="index.html">About</a>
+            </nav>
+        </div>
+    </header>
+
+    <div id="main-container" class="container">
+        <section class="main-section">
+
+            <h1>Portfolio</h1>
+            <div class="grid-container clearfix">
+                <div class="box">
+                    <img src="assets/images/Afterlight.jpg" alt="Afterlight">
+                    <div class="box-text">Afterlight</div>
+                </div>
+                <div class="box">
+                    <img src="assets/images/dontfeelgood.png" alt="dontfeelgood">
+                    <div class="box-text">I don't feel so good</div>
+                </div>
+                <div class="box">
+                    <img src="assets/images/ShipSign.png" alt="ShipSign">
+                    <div class="box-text">Ship Sign</div>
                 </div>
             </div>
-        </div>
+        </section>
     </div>
-
+    <footer class="footer">Copyright &copy</footer>
 </body>
 
 </html>
