--- a/contact.html
+++ b/contact.html
@@ -12,24 +12,22 @@
 
 <body>
     <div id="preload-01"></div>
-    <nav>
-        <div class="navContainer">
-            <a id="logo" class="hclass">Casey Shore</a>
-            <div class="clinks">
-                <div class="fclass">
-                    <a id="contact" href="#">Contact</a>
-                    <a id="portfolio" href="portfolio.html">Portfolio</a>
-                    <a id="about" href="index.html">About</a>
-                </div>
-            </div>
+    <header id="m-head">
+        <div class="container">
+            <a id="logo">Casey Shore</a>
+            <nav>
+                <a id="contact" href="contact.html">Contact</a>
+                <a id="portfolio" href="portfolio.html">Portfolio</a>
+                <a id="about" href="index.html">About</a>
+            </nav>
         </div>
-    </nav>
-    <div class="container clearfix">
-        <a class="hclass">Contact</a>
-        <div class="row">
-            <div class="column">
-                <form action="action_page.php">
-                    <div class="fclass">
+    </header>
+    <div id="main-container" class="container">
+        <section class="main-section">
+            <h1>Contact</h1>
+            <div class="row">
+                <div class="column">
+                    <form action="action_page.php">
                         <label for="fname">Full Name</label>
                         <input type="text" id="fname" name="fullname" placeholder="Your name..">
 
@@ -40,11 +38,12 @@
                         <textarea id="subject" name="subjectname" placeholder="Write something.." style="height:200px"></textarea>
 
                         <input type="submit" value="Submit">
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
-        </div>
+        </section>
     </div>
+    <footer class="footer">Copyright &copy</footer>
 </body>
 
 </html>
