--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
             </div>
         </section>
     </div>
-    <footer class="footer">Copyright &copy</footer>
+    <footer class="footer">Copyright ©</footer>
 </body>
 
 </html>
