--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </p>
         </section>
     </div>
-    <footer class="footer">Copyright &copy</footer>
+    <footer class="footer">Copyright ©</footer>
 </body>
 
 </html>
