--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
             </div>
         </section>
     </div>
-    <footer class="footer">Copyright &copy</footer>
+    <footer class="footer">Copyright ©</footer>
 </body>
 
 </html>
